--- a/login.html
+++ b/login.html
@@ -4,11 +4,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Autenticarme | Riwi</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/css/bootstrap.min.css" rel="stylesheet">
 </head>
 
-<body style="background-color: #ddd;">
+<body style="background-color: #f9f9f9;">
     <section class="vh-100 mt-5">
         <div class="container-fluid h-custom p-3">
             <div class="row d-flex justify-content-center align-items-center h-100">
